--- a/gui/index.html
+++ b/gui/index.html
@@ -3942,6 +3942,9 @@ double s_freq = .0625;</p>
 		<tr class=odd><td align=center>Out 7</td><td>Delay Tap #8</td></tr>
 	</table>
 	<h3>Functions</h3>
+	<p class=func><span class=keyword>initialize</span>(samples);</p>
+	<p class=desc>Allocate SPI memory for the delay.</p>
+	</p>
 	<p class=func><span class=keyword>delay</span>(channel, milliseconds);</p>
 	<p class=desc>Set output channel (0 to 7) to delay the signals by
 		milliseconds.  The maximum delay is approx 1.5 seconds for each 23LC1024 chip.
